--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,48 @@
 version: 2.1
 
-jobs:
-  build-and-test:
+executors:
+  java-executor:
     docker:
       - image: cimg/openjdk:21.0.2
+
+jobs:
+  build:
+    executor: java-executor
     steps:
       - checkout
+
+      - restore_cache:
+          keys:
+            - maven-repo-{{ checksum "pom.xml" }}
+            - maven-repo-
+
       - run:
-        name: Build
-        command: mvn -B -DskipTests clean package
+          name: Build with Maven
+          command: mvn clean install -DskipTests
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: maven-repo-{{ checksum "pom.xml" }}
+
+  test:
+    executor: java-executor
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - maven-repo-{{ checksum "pom.xml" }}
+            - maven-repo-
+
       - run:
-        name: Test
-        command: mvn test
+          name: Run Integration Tests
+          command: mvn verify
 
 workflows:
+  version: 2
   build-and-test:
     jobs:
-      - build-and-test
+      - build
+      - test:
+          requires:
+            -build
