--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,19 @@
 version: 2.1
 
-executors:
-  java-executor:
+jobs:
+  build-and-test:
     docker:
       - image: cimg/openjdk:21.0.2
-
-jobs:
-  build:
-    executor: java-executor
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - maven-repo-{{ checksum "pom.xml" }}
-            - maven-repo-
-
       - run:
-          name: Build with Maven
-          command: mvn clean install -DskipTests
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: maven-repo-{{ checksum "pom.xml" }}
-
-  test:
-    executor: java-executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - maven-repo-{{ checksum "pom.xml" }}
-            - maven-repo-
-
+          name: Build
+          command: mvn -B -DskipTests clean package
       - run:
-          name: Run Integration Tests
-          command: mvn verify
+          name: Test
+          command: mvn test
 
 workflows:
-  version: 2
   build-and-test:
     jobs:
-      - build
-      - test:
-          requires:
-            -build
+      - build-and-test
